# dex-contracts

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
programs/ai_dex/: Cargo.toml
programs/ai_dex/src/: errors.rs  lib.rs  security.rs
programs/ai_dex/src/constants/: mod.rs  nft.rs  test_constants.rs  transfer_memo.rs
programs/ai_dex/src/instructions/: close_position.rs  decrease_liquidity.rs  increase_liquidity.rs  initialize_tick_array.rs  mod.rs  open_position.rs  open_position_with_metadata.rs  swap.rs  two_hop_swap.rs
programs/ai_dex/src/instructions/fees_rewards/: mod.rs
programs/ai_dex/src/instructions/initialize_pool/: initialize_pool_step_1.rs  initialize_pool_step_2.rs  mod.rs
programs/ai_dex/src/instructions/test/: mock_oracle_price_update.rs  mod.rs
programs/ai_dex/src/math/: bit_math.rs  bn.rs  liquidity_math.rs  mod.rs  oracle_math.rs  swap_math.rs  tick_math.rs  token_math.rs  u256_math.rs
programs/ai_dex/src/orchestrator/: ai_dex_orchestrator.rs  liquidity_orchestrator.rs  mod.rs  position_orchestrator.rs  swap_orchestrator.rs  tick_orchestrator.rs
programs/ai_dex/src/state/: ai_dex.rs  config.rs  fee_tier.rs  mod.rs  oracle.rs  position.rs  position_trade_batch.rs  reinvestments.rs  super_admin.rs  swap_referral.rs  tick.rs
programs/ai_dex/src/tests/: mod.rs  swap_integration_tests.rs  swap_test_cases.json
programs/ai_dex/src/util/: mod.rs  referral_utils.rs  reinvestments_utils.rs  remaining_accounts_utils.rs  swap_tick_sequence.rs  swap_utils.rs  token.rs  util.rs
(+50 files in other folders)
